--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/register": "^7.13.16",
     "@babel/preset-env": "^7.14.0",
+    "@babel/register": "^7.13.16",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -36,11 +36,16 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.2.13",
+    "postcss-custom-properties": "^11.0.0",
     "postcss-loader": "^5.2.0",
     "postcss-mixins": "^7.0.3",
+    "postcss-move-props-to-bg-image-query": "^4.0.0",
     "postcss-nesting": "^8.0.0",
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
+    "svg-transform-loader": "^2.0.13",
+    "svg-url-loader": "^7.1.1",
+    "svgo": "^2.3.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.2",
     "webpack-assets-manifest": "^5.0.6",
