--- a/package.json
+++ b/package.json
@@ -25,32 +25,33 @@
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
     "@babel/register": "^7.13.16",
+    "@csstools/postcss-global-data": "^1.0.3",
     "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "compression-webpack-plugin": "^8.0.0",
+    "compression-webpack-plugin": "^10.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.4",
-    "cssnano": "^5.0.2",
-    "cssnano-preset-default": "^5.0.1",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1",
+    "cssnano-preset-default": "^6.0.1",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^1.6.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.2.13",
-    "postcss-custom-properties": "^11.0.0",
-    "postcss-loader": "^5.2.0",
-    "postcss-mixins": "^7.0.3",
+    "postcss-custom-properties": "^13.2.0",
+    "postcss-loader": "^7.3.2",
+    "postcss-mixins": "^9.0.4",
     "postcss-move-props-to-bg-image-query": "^4.0.0",
-    "postcss-nesting": "^8.0.0",
-    "source-map-loader": "^2.0.1",
-    "style-loader": "^2.0.0",
+    "postcss-nesting": "^11.2.2",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.3",
     "svg-transform-loader": "^2.0.13",
-    "svg-url-loader": "^7.1.1",
-    "svgo": "^2.3.0",
+    "svg-url-loader": "^8.0.0",
+    "svgo": "^3.0.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.2",
     "webpack-assets-manifest": "^5.0.6",
     "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.6.0",
+    "webpack-cli": "^5.1.3",
     "webpack-remove-block-loader": "^1.0.2"
   }
 }
