Update dependencies, remove unused frontend dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # .git/info/exclude or the core.excludesFile configuration variable as
 # described in https://git-scm.com/docs/gitignore
 
+# Byte-compiled / optimized files
 __pycache__/
 *.py[cod]
 
@@ -16,7 +17,6 @@ __pycache__/
 /ponyfiction/
 /localstatic/
 /node_modules/
-/package-lock.json
 
 # mini_fiction stuff
 /local/
