--- a/package.json
+++ b/package.json
@@ -19,39 +19,33 @@
       "url": "https://orhideous.name/"
     }
   ],
-  "license": "GPLv3",
+  "license": "GPL-3.0-only",
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/register": "^7.22.5",
-    "@csstools/postcss-global-data": "^1.0.3",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^9.1.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/register": "^7.22.15",
+    "@csstools/postcss-global-data": "^2.1.0",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
     "compression-webpack-plugin": "^10.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.1",
     "cssnano-preset-default": "^6.0.1",
-    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.2.13",
-    "postcss-custom-properties": "^13.2.0",
+    "postcss": "^8.4.30",
+    "postcss-custom-properties": "^13.3.2",
     "postcss-loader": "^7.3.3",
     "postcss-mixins": "^9.0.4",
     "postcss-move-props-to-bg-image-query": "^4.0.0",
-    "postcss-nesting": "^11.2.2",
-    "source-map-loader": "^4.0.1",
-    "style-loader": "^3.3.3",
+    "postcss-nesting": "^12.0.1",
     "svg-transform-loader": "^2.0.13",
     "svg-url-loader": "^8.0.0",
-    "svgo": "^3.0.2",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.86.0",
+    "webpack": "^5.88.2",
     "webpack-assets-manifest": "^5.0.6",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-remove-block-loader": "^1.0.2"
+    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-cli": "^5.1.4"
   }
 }
